<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_general"
        android:checkableBehavior="none">

        <item
            android:id="@+id/halamanUtama"
            android:icon="@drawable/icon_dashboard"
            android:title="@string/menu_halaman_utama" />

        <item
            android:id="@+id/biodata"
            android:icon="@drawable/icon_biodata"
            android:title="@string/menu_biodata" />

        <!--<item
            android:id="@+id/surat"
            android:icon="@drawable/icon_surat"
            android:title="@string/menu_permintaan_surat" />-->

        <item
            android:id="@+id/quran"
            android:icon="@drawable/icon_test"
            android:title="@string/menu_test_qur_an" />

        <item
            android:id="@+id/uet"
            android:icon="@drawable/icon_test"
            android:title="@string/menu_uai_english_test" />
    </group>

    <group
        android:id="@+id/menu_perkuliahan"
        android:checkableBehavior="none">

        <item
            android:id="@+id/akademik"
            android:icon="@drawable/icon_akademik"
            android:title="@string/menu_ringkasan_akademik" />

        <item
            android:id="@+id/keuangan"
            android:icon="@drawable/icon_keuangan"
            android:title="@string/menu_keuangan" />

        <item
            android:id="@+id/krs"
            android:icon="@drawable/icon_input"
            android:title="@string/menu_isi_krs" />

        <item
            android:id="@+id/perkuliahan"
            android:icon="@drawable/icon_perkuliahan"
            android:title="@string/menu_perkuliahan" />

        <item
            android:id="@+id/nilai"
            android:icon="@drawable/icon_nilai"
            android:title="@string/menu_nilai" />
    </group>

    <group
        android:id="@+id/menu_semester_pendek"
        android:checkableBehavior="none">

        <item
            android:id="@+id/sp_krs"
            android:icon="@drawable/icon_input"
            android:title="@string/menu_krs_semester_pendek" />

        <item
            android:id="@+id/sp_perkuliahan"
            android:icon="@drawable/icon_perkuliahan"
            android:title="@string/menu_perkuliahan_sp" />
    </group>

    <group
        android:id="@+id/menu_pendaftaran"
        android:checkableBehavior="none">

        <item
            android:id="@+id/daftar_sidang"
            android:icon="@drawable/icon_daftar_sidang"
            android:title="@string/menu_daftar_sidang" />

        <item
            android:id="@+id/daftar_wisuda"
            android:icon="@drawable/icon_daftar_wisuda"
            android:title="@string/menu_daftar_wisuda" />
    </group>

    <group
        android:id="@+id/menu_logout"
        android:checkableBehavior="none">

        <item
            android:id="@+id/logout"
            android:icon="@drawable/icon_logout"
            android:title="@string/nav_log_out" />
    </group>
</menu>