<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    tools:context=".view.tabNilai.NilaiAktif">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/kolom_nomor"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="12sp"
            android:textAlignment="center"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:layout_margin="1dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/kolom_kode"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="12sp"
            android:textAlignment="center"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:layout_margin="1dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/kolom_matakuliah"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="12sp"
            android:textAlignment="center"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_margin="1dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/kolom_sks"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="12sp"
            android:textAlignment="center"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_margin="1dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/nav_nilai"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="12sp"
            android:textAlignment="center"
            android:gravity="center"/>
    </TableRow>
</TableLayout>