<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.tabSemesterPendek.PenggantiSp">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_margin="1dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/kolom_matakuliah"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="12sp"
            android:textAlignment="center"
            android:gravity="center_vertical"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_margin="1dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/kolom_dosen"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="12sp"
            android:textAlignment="center"
            android:gravity="center_vertical"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_margin="1dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/kolom_berhalangan"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="12sp"
            android:textAlignment="center"
            android:gravity="center_vertical"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_margin="1dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/kolom_pengganti"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="12sp"
            android:textAlignment="center"
            android:gravity="center_vertical"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/kolom_ruang"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="12sp"
            android:textAlignment="center"
            android:gravity="center_vertical"/>
    </TableRow>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvKuliahPenggantiSp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</TableLayout>