<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.tabPerkuliahan.Jadwal">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@android:color/black">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginBottom="1dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/kolom_kelas"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="12sp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_marginTop="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginBottom="1dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/kolom_matakuliah"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="12sp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginBottom="1dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/kolom_sks"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="12sp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_marginTop="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginBottom="1dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/kolom_waktu"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="12sp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_marginTop="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginBottom="1dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/kolom_dosen"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="12sp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/kolom_ruang"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="12sp"
            android:textAlignment="center"/>
    </TableRow>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewJadwalKuliah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/darker_gray">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@android:color/darker_gray"
            android:text="@string/total_sks"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="12sp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/sksTotal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="12sp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </TableRow>


</TableLayout>